[package]
name = "hpx-streams"
version.workspace = true
description = "HTTP response streaming support for hpx: JSON/CSV/Protobuf/Arrow"
keywords = ["http", "stream", "json", "csv", "protobuf"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
arrow = ["dep:arrow"]
csv = ["dep:csv", "dep:serde"]
default = []
json = ["dep:serde", "dep:serde_json", "hpx/json"]
protobuf = ["dep:prost"]

[dependencies]
arrow = { workspace = true, optional = true, features = ["ipc", "arrow-ipc"] }
bytes = { workspace = true }
csv = { workspace = true, optional = true }
futures = { workspace = true }
hpx = { workspace = true, features = ["stream"] }
prost = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
tokio-util = { workspace = true, features = ["io", "codec"] }

[lints]
workspace = true
