[package]
name = "hpx-transport"
repository.workspace = true
version.workspace = true
description = "Exchange SDK toolkit for cryptocurrency trading with authentication, WebSocket, and rate limiting"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ws-yawc"]

# WebSocket backend selection (choose one).
ws-fastwebsockets = ["hpx/ws-fastwebsockets", "dep:fastwebsockets"]
ws-yawc = ["hpx/ws-yawc"]

[dependencies]
async-trait = { workspace = true }
bytes.workspace = true
fastwebsockets = { workspace = true, features = [
    "upgrade",
    "unstable-split",
], optional = true }
futures-util.workspace = true
hex.workspace = true
hmac.workspace = true
hpx = { workspace = true, features = [
    "json",
    "tracing",
    "boring",
    "http1",
    "http2",
] }
http = { workspace = true }
opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic", "metrics"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
rand.workspace = true
scc.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_urlencoded.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "time",
    "sync",
    "net",
    "macros",
    "rt-multi-thread",
] }
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
criterion.workspace = true
futures = { workspace = true }
hpx-yawc = { workspace = true, features = ["axum"] }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["tokio"] }
tempfile.workspace = true
tokio-test.workspace = true
tracing-subscriber.workspace = true
