[package]
name = "hpx-transport"
repository.workspace = true
version.workspace = true
description = "Exchange SDK toolkit for cryptocurrency trading with authentication, WebSocket, and rate limiting"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["boring", "ws-yawc"]

# OpenTelemetry OTLP gRPC metrics integration.
metrics = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
]

# TLS backend selection (choose one).
boring = ["hpx/boring"]
rustls = ["hpx/rustls-tls"]

# WebSocket backend selection (choose one).
sse = [
    "dep:bytes-utils",
    "dep:futures-core",
    "dep:memchr",
    "dep:pin-project-lite",
    "hpx/stream",
]
ws-fastwebsockets = ["hpx/ws-fastwebsockets", "dep:fastwebsockets"]
ws-yawc = ["hpx/ws-yawc"]

[dependencies]
async-trait = { workspace = true }
bytes.workspace = true
bytes-utils = { workspace = true, optional = true }
fastwebsockets = { workspace = true, features = [
    "upgrade",
    "unstable-split",
], optional = true }
futures-core = { workspace = true, optional = true }
futures-util.workspace = true
hex.workspace = true
hmac.workspace = true
hpx = { workspace = true, features = [
    "json",
    "tracing",
    "http1",
    "http2",
    "socks",
] }
http = { workspace = true }
memchr = { workspace = true, optional = true }
opentelemetry = { workspace = true, features = ["metrics"], optional = true }
opentelemetry-otlp = { workspace = true, features = [
    "grpc-tonic",
    "metrics",
], optional = true }
opentelemetry_sdk = { workspace = true, features = [
    "rt-tokio",
], optional = true }
pin-project-lite = { workspace = true, optional = true }
rand.workspace = true
scc.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_urlencoded.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "time",
    "sync",
    "net",
    "macros",
    "rt-multi-thread",
] }
tracing.workspace = true
ulid.workspace = true
url.workspace = true

[dev-dependencies]
criterion.workspace = true
futures = { workspace = true }
hpx-yawc = { workspace = true, features = ["axum"] }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["tokio"] }
tempfile.workspace = true
tokio-test.workspace = true
tracing-subscriber.workspace = true

[[example]]
name = "sse_stream"
required-features = ["sse"]
