[package]
name = "hpx-yawc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Yet another websocket library. A fast, secure WebSocket implementation with RFC 6455 compliance and compression support"
documentation = "https://docs.rs/hpx-yawc"
repository.workspace = true
license.workspace = true
keywords = ["websocket", "websockets", "ws", "networking", "wasm"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming",
    "web-programming::websocket",
    "wasm",
]
readme = "README.md"

# Package build settings
exclude = ["/.github/*", "/examples/*", "/tests/*", "/.gitignore"]
include = ["/src/**/*", "/Cargo.toml", "/README.md", "/LICENSE"]

# Documentation settings
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
# These were blanket allows; scoped below for targeted suppression only.

# Optional feature configurations
[features]
axum = ["axum-core", "http"]
default = ["rustls-ring"]
hotpath = ["dep:hotpath"]
proxy = []
rustls-aws-lc-rs = ["tokio-rustls/aws-lc-rs"]
rustls-ring = ["tokio-rustls/ring"]
simd = ["simdutf8"]
smol = ["dep:smol"]
socks = ["proxy", "dep:tokio-socks"]
zlib = ["flate2/any_zlib", "flate2/zlib-rs"]

# ==============================================================================
# Common dependencies (shared across all targets)
# ==============================================================================
[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
hotpath = { workspace = true, features = [
    "hotpath",
], optional = true }
rand = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

# ==============================================================================
# Native target-specific dependencies
# ==============================================================================
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# HTTP servers (optional)
axum-core = { workspace = true, optional = true }

# Encoding and cryptography
base64-simd = { workspace = true }

# Compression
flate2 = { workspace = true }
http = { workspace = true, optional = true }
http-body-util = { workspace = true }
# HTTP clients
hyper = { workspace = true, features = ["client", "http1"] }
hyper-util = { workspace = true, features = ["tokio"] }

# Utilities
percent-encoding = { workspace = true }
pin-project-lite = { workspace = true }
sha1 = { workspace = true }

# Optional dependencies
simdutf8 = { workspace = true, optional = true }
smol = { workspace = true, optional = true }

# Async runtime and utilities
tokio = { workspace = true, features = [
    "rt",
    "macros",
    "net",
    "time",
    "io-util",
] }
tokio-rustls = { workspace = true, features = [
    "logging",
    "tls12",
] }
tokio-socks = { workspace = true, optional = true }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
webpki-roots = { workspace = true }

# ==============================================================================
# WebAssembly target-specific dependencies
# ==============================================================================
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
# Tokio without net features for WASM
tokio = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "console",
    "WebSocket",
    "BinaryType",
    "CloseEvent",
    "MessageEvent",
] }

# ==============================================================================
# Development dependencies
# ==============================================================================
[dev-dependencies]
eyre = { workspace = true }
serde_json = { workspace = true }

# ==============================================================================
# Development dependencies (native only)
# ==============================================================================
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
axum = { workspace = true }
criterion = { workspace = true }
eyre = { workspace = true }
futures-rustls = { workspace = true }
hyper = { workspace = true, features = ["http1", "server", "client"] }
rand = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
rustls-native-certs = { workspace = true }
rustls-pki-types = { workspace = true }
smol = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
webpki-roots = { workspace = true }

[lints.rust]

# Examples configuration
[[example]]
name = "yawc_axum"
path = "examples/axum.rs"
required-features = ["axum"]
test = false

[[example]]
name = "yawc_autobahn_client"
path = "examples/autobahn_client.rs"
test = false

[[example]]
name = "autobahn_server"
required-features = ["axum"]
test = false

[[example]]
name = "client"
test = false

[[example]]
name = "custom_dns"
test = false

[[example]]
name = "yawc_echo_server"
path = "examples/echo_server.rs"
required-features = ["axum"]
test = false

[[example]]
name = "client_smol"
path = "examples/client_smol.rs"
required-features = ["smol"]
test = false

[[example]]
name = "echo_server_smol"
path = "examples/echo_server_smol.rs"
required-features = ["smol"]
test = false

[[example]]
name = "proxy"
test = false

[[bench]]
name = "websocket_core"
harness = false
