[package]
name = "fastwebsockets-fuzz"
version = "0.1.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
futures = "0.3.31"
libfuzzer-sys = "0.4.10"
tokio = { version = "1.49.0", features = ["full"] }

[dependencies.fastwebsockets]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]

[profile.release]
debug = 1

[[bin]]
name = "parse_frame"
path = "fuzz_targets/parse_frame.rs"
test = false
doc = false

[[bin]]
name = "parse_frame_fragment"
path = "fuzz_targets/parse_frame_fragment.rs"
test = false
doc = false

[[bin]]
name = "unmask"
path = "fuzz_targets/unmask.rs"
test = false
doc = false
