[package]
name = "fastwebsockets-fuzz"
version = "0.1.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
futures = "0.3.31"
libfuzzer-sys = "0.4.10"
tokio = { version = "1.49.0", features = ["full"] }

[dependencies.fastwebsockets]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
chrono = "0.4.43"
clap = "4.5.59"
eyre = "0.6.12"
futures = "0.3.32"
home = "0.5.12"
http-body-util = "0.1.3"
humantime = "2.3.0"
hyper = "1.8.1"
hyper-util = "0.1.20"
rustyline = "17.0.2"
serde_json = "1.0.149"
tokio = "1.49.0"
url = "2.5.8"
yawc = "0.3.3"

[profile.release]
debug = 1

[[bin]]
name = "parse_frame"
path = "fuzz_targets/parse_frame.rs"
test = false
doc = false

[[bin]]
name = "parse_frame_fragment"
path = "fuzz_targets/parse_frame_fragment.rs"
test = false
doc = false

[[bin]]
name = "unmask"
path = "fuzz_targets/unmask.rs"
test = false
doc = false
