[package]
name = "yawcc"
version = "0.1.3"
edition = "2021"
authors = ["Dario <dario@infinitefieldtrading.com>"]
description = "CLI tool using yawc"
repository = "https://github.com/infinitefield/yawc"
license = "LGPL-3.0-or-later"
keywords = ["websocket", "websockets", "ws", "networking", "async"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming",
    "web-programming::websocket",
]
readme = "README.md"
rust-version = "1.75.0"

# [patch.crates-io]
# yawc = { path = ".." }

[workspace]

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.20", features = ["derive"] }
eyre = "0.6.12"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
home = "0.5.9"
http-body-util = "0.1.2"
humantime = "2.1.0"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.10", features = ["http1", "server"] }
rustyline = "14.0.0"
serde_json = "1.0.132"
tokio = { version = "1.43.1", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
    "signal",
] }
url = "2.5.3"
yawc = { package = "hpx-yawc", version = "1.1.0", path = "..", default-features = false, features = [
    "rustls-aws-lc-rs",
] }
