[package]
name = "yawcc"
version = { workspace = true }
edition = { workspace = true }
authors = ["Dario <dario@infinitefieldtrading.com>"]
description = "CLI tool using yawc"
repository = "https://github.com/infinitefield/yawc"
license = "LGPL-3.0-or-later"
keywords = ["websocket", "websockets", "ws", "networking", "async"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming",
    "web-programming::websocket",
]
readme = "README.md"

# [patch.crates-io]
# yawc = { path = ".." }

[workspace]

[dependencies]
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
eyre = { workspace = true }
futures = { workspace = true, features = ["std"] }
home = { workspace = true }
http-body-util = { workspace = true }
humantime = { workspace = true }
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["http1", "server"] }
rustyline = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
    "signal",
] }
url = { workspace = true }
yawc = { workspace = true, features = [
    "rustls-aws-lc-rs",
] }
